--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1>rOML</h1>
+<div class="logo">
+    <h1>rOMS<span class="fiscal-year">FY19</span> :: a tool to calculate your oms</h1>
+</div>
+<!-- <div class="toolbar">
+    <nav>
+        <button mat-button routerLink="/main" class="toolbar-button">Main</button>
+        <button mat-button routerLink="" class="toolbar-button">About</button>
+    </nav>
+</div> -->
 <router-outlet></router-outlet>
-
+<div class="subtext">Created by CDT Michael Hiebert of The Paul Revere Battalion - MIT's Army ROTC Program.</div>
