--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="logo">
-    <h1>rOMS<span class="fiscal-year">FY19</span> :: a tool to calculate your oms</h1>
+    <h1>rOMS<span class="fiscal-year">FY19</span></h1>
 </div>
 <!-- <div class="toolbar">
     <nav>
