--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -24,7 +24,7 @@
           <br>
           <mat-form-field class="col-sm">
             <input matInput [(ngModel)]="gpa" 
-                    type="number"
+                    type="text"
                     inputmode="numeric"
                     pattern="[0-9]*"
                     formControlName="gpaAdmCtrl" >
@@ -64,12 +64,12 @@
           <br>
           <mat-form-field>
             <mat-label>Strategic Language Courses</mat-label>
-            <input matInput [(ngModel)]="stratLangCourses" type="number" inputmode="numeric" pattern="[0-9]*" formControlName="langCtrl">
+            <input matInput [(ngModel)]="stratLangCourses" type="text" inputmode="numeric" pattern="[0-9]*" formControlName="langCtrl">
           </mat-form-field>
           <br>
           <mat-form-field>
             <mat-label>Non-Strategic Language Courses</mat-label>
-            <input matInput [(ngModel)]="nonStratLangCourses" type="number" inputmode="numeric" pattern="[0-9]*" formControlName="langCtrl">
+            <input matInput [(ngModel)]="nonStratLangCourses" type="text" inputmode="numeric" pattern="[0-9]*" formControlName="langCtrl">
           </mat-form-field>
           <hr>
           <div>
@@ -86,12 +86,12 @@
           <br>
           <mat-form-field>
             <mat-label>Ranking (1 is highest)</mat-label>
-            <input matInput [(ngModel)]="ranking" type="number" inputmode="numeric" pattern="[0-9]*" class="number" formControlName="pmspOmsRankingCtrl">
+            <input matInput [(ngModel)]="ranking" type="text" inputmode="numeric" pattern="[0-9]*" class="number" formControlName="pmspOmsRankingCtrl">
           </mat-form-field>
           <br>
           <mat-form-field>
             <mat-label>Total People in MS Year</mat-label>
-            <input matInput [(ngModel)]="totalPeople" type="number" inputmode="numeric" pattern="[0-9]*" class="number" formControlName="pmspOmsRankingCtrl">
+            <input matInput [(ngModel)]="totalPeople" type="text" inputmode="numeric" pattern="[0-9]*" class="number" formControlName="pmspOmsRankingCtrl">
           </mat-form-field>
           <br>
           <mat-form-field>
@@ -419,7 +419,7 @@
             <input matInput placeholder="Fall APFT"
                     type="number"
                     [(ngModel)]="fallAPFT"
-                    inputmode="numeric" pattern="[0-9]*"
+                    inputmode="text" pattern="[0-9]*"
                     formControlName="apftCtrl"
                     min="0"
                     max="300">
@@ -429,7 +429,7 @@
             <input matInput placeholder="Spring APFT"
                     type="number"
                     [(ngModel)]="springAPFT"
-                    inputmode="numeric" pattern="[0-9]*"
+                    inputmode="text" pattern="[0-9]*"
                     formControlName="apftCtrl"
                     min="0"
                     max="300">
@@ -439,7 +439,7 @@
             <input matInput placeholder="Camp APFT"
                     type="number"
                     [(ngModel)]="acAPFT"
-                    inputmode="numeric" pattern="[0-9]*"
+                    inputmode="text" pattern="[0-9]*"
                     formControlName="apftCtrl"
                     min="0"
                     max="300">
