--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -61,6 +61,12 @@
           Nonstrategic Language Major?
           </mat-checkbox>
           <br>
+          <mat-checkbox matInput [(ngModel)]="studyAbroad"
+          formControlName="langCtrl"
+          >
+          Studied Abroad?
+          </mat-checkbox>
+          <br>
           <br>
           <mat-form-field>
             <mat-label>Strategic Language Courses</mat-label>
